How To Fragmentを追加したり、バーの色を濃い緑色に変えたりしました。その他バグも修正し、見やすくしました。

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">app_03</string>
+    <string name="app_name">Everdrobe</string>
     <string name="title_shopping">Shopping</string>
     <string name="title_account">Account</string>
     <string name="title_point">Point</string>
